--- a/index.html
+++ b/index.html
@@ -1,41 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=Neo, initial-scale=1.0">
-    <title>Tabs</title>
-    <link href='style.css' rel='stylesheet'>
-  </head>
-  <body>
-    <div class="tabs">
-      <div class="tabs__head">
-        <div class="tabs__toggle is-active">
-          <span class="tabs__name">First Tab</span>
-        </div>
-        <div class="tabs__toggle">
-          <span class="tabs__name">Second Tab</span>
-        </div>
-        <div class="tabs__toggle">
-          <span class="tabs__name">Third Tab</span>
-        </div>
-      </div>
-      <div class="tabs__body">
-        <div class="tabs__content is-active">
-          <h2 class="tabs__title">First Title</h2>
-          <p class="tabs__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, voluptates nihil reprehenderit architecto deleniti a blanditiis dolore voluptate cupiditate saepe sequi, quo iusto tempora itaque excepturi! Sunt optio nihil minus?</p>
-        </div>
-        <div class="tabs__content">
-          <h2 class="tabs__title">Second Title</h2>
-          <p class="tabs__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora natus voluptas, molestias voluptates consequuntur quibusdam aspernatur expedita tempore libero excepturi obcaecati earum minus omnis adipisci fuga officia, autem, perferendis voluptatibus!</p>
-        </div>
-        <div class="tabs__content">
-          <h2 class="tabs__title">Third Title</h2>
-          <p class="tabs__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia quasi commodi nisi ex nostrum, aspernatur dicta perferendis deserunt reiciendis a delectus molestias eius porro, tempore molestiae ipsam sit quam aut officia, autem, perferendis?</p>
-        </div>
-      </div>
-    </div>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Reusable Tabs</title>
+		<link href="styles/style.css" rel="stylesheet" />
+	</head>
+	<body>
+		<!-- <div id="tabs-container"> -->
+		<!-- Заголовки табів -->
+		<div class="tabs__head">
+			<div class="tabs__toggle is-active" data-tab="tab1">
+				<span class="tabs__name">📌 Task</span>
+			</div>
+			<div class="tabs__toggle" data-tab="tab2">
+				<span class="tabs__name">⏱️ Range</span>
+			</div>
+			<div class="tabs__toggle" data-tab="tab3">
+				<span class="tabs__name">🎉 Holidays</span>
+			</div>
+		</div>
 
-    <script src="script.js"></script>
-  </body>
+		<!-- Контент табів -->
+		<div class="tabs__body">
+			<!-- Task Tab -->
+			<div id="tab1" class="tabs__content is-active">
+				<h2 class="tabs__title">Task Tab</h2>
+				<p class="tabs__text">Content for the Task tab goes here.</p>
+			</div>
+
+			<!-- Range Tab -->
+			<div id="tab2" class="tabs__content">
+				<h2 class="tabs__title">Range Tab</h2>
+
+				<!-- Date Pickers -->
+				<form action="." id="form">
+					<label for="start-date">Start Date</label>
+					<input
+						type="date"
+						id="start-date"
+						name="start-date"
+						value="2024-12-09"
+					/>
+					<span class="validity"></span>
+					<label for="end-date">End Date</label>
+					<input type="date" id="end-date" name="end-date" value="2024-12-31" />
+
+					<!-- Dropdown Select -->
+
+					<label for="range-selector">Select range</label>
+
+					<select id="range-selector" name="range">
+						<option value="7days">Week (7 days)</option>
+						<option value="30days">Month (30 days)</option>
+					</select>
+
+					<label for="options-selector">Select options</label>
+
+					<select id="options-selector">
+						<option value="all">All days</option>
+						<option value="work">Work days</option>
+						<option value="holidays">Holidays</option>
+					</select>
+				</form>
+
+				<!-- Buttons -->
+				<div class="tabs__actions">
+					<button id="day-button" class="result-button" data-range="day">
+						Day
+					</button>
+					<button id="hours-button" class="result-button" data-range="hours">
+						Hours
+					</button>
+					<button id="minutes-button" class="result-button">Minutes</button>
+					<button id="seconds-button" class="result-button">Seconds</button>
+				</div>
+
+				<!-- History -->
+				<p class="tabs__text">History:</p>
+				<ul class="history-list">
+					<li>Result 1</li>
+					<li>Result 2</li>
+					<li>...</li>
+					<li>Result 10</li>
+				</ul>
+			</div>
+
+			<!-- Holidays Tab -->
+			<div id="tab3" class="tabs__content">
+				<h2 class="tabs__title">Holidays Tab</h2>
+				<p class="tabs__text">Content for the Holidays tab goes here.</p>
+			</div>
+		</div>
+		<!-- </div> -->
+
+		<script src="js/app.js"></script>
+	</body>
 </html>
