--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <!-- Date Pickers -->
         <div class="date-pickers">
           <label for="start-date">Start Date</label>
-          <input type="date" id="start-date" name="start-date" value="2025-01-15" />
+          <input type="date" id="start-date" name="start-date" value="" />
 
           <!-- Checkbox Presets -->
           <div class="checkbox-container">
@@ -158,7 +158,7 @@
         
         <!-- Список років -->
         <label for="year-selector">Select year</label>
-        <select id="year-selector"></select>
+        <select id="year-selector" disabled></select>
 
         <button id="show-holidays-button"  class="holidays-button"  disabled>👇🏻 Show Holidays 👇🏻</button>
 
@@ -189,9 +189,9 @@
     <!-- <script src="js/dateRangeCalculate/oldNew.js" type="module" defer></script> -->
     <script src="js/dateRangeCalculator/index.js" type="module" defer></script>
     <!-- <script src="js/dateRangeCalculate/newAll.js" type="module" defer></script> -->
+		<!-- <script type="module" src="./js/holidays/holidaysApp.js"></script> -->
 
-
-		<!-- <script type="module" src="./js/holidays/index.js"></script> -->
+		<script type="module" src="./js/holidays/index.js"></script>
 
 
 		<script>
