--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 				</button>
 
 				<!-- Holiday display table -->
-				<table id="table-result">
+				<table id="table-result" hidden>
 					<thead>
 						<tr>
 							<th>
