--- a/index.html
+++ b/index.html
@@ -50,19 +50,39 @@
 				<p class="toggle-hidden-text" onclick="toggleText1()">
 					<u>Особливості роботи таби №1</u>
 				</p>
-				<p class="hidden-text" id="text1">
-					Тільки після того як юзер обрав одну дату в першому інпуті, він може
-					обрати дату в другому інпуті яка йде не раніше дати з першого інпуту і
-					навпаки Юзер може обрати пресети проміжків часу: — 'тиждень' (7 днів)
-					— 'місяць' (30 днів) Юзер може обрати опції: — 'Всі дні' — 'Будні дні'
-					— 'Вихідні дні' Юзер може вибрати опції: — 'Порахувати кількість днів'
-					— 'Порахувати кількість годин' — 'Порахувати кількість хвилин' —
-					'Порахувати кількість секунд' Юзер може зайти в застосунок і побачити,
-					якщо вони є, останні 10 результатів які він рахував у вигляді таблиці
-					(стартова дата, кінцева дата, і який результат виміру) — Для цього
-					використати localStorage
-				</p>
+				<div class="hidden-text" id="text1">
+					<p>
+						1. Тільки після того, як юзер обрав одну дату в першому інпуті, він
+						може обрати дату в другому інпуті, яка йде не раніше дати з першого
+						інпуту і навпаки. Юзер може обрати пресети проміжків часу:
+					</p>
+					<ul>
+						<li>'тиждень' (7 днів)</li>
+						<li>'місяць' (30 днів)</li>
+					</ul>
 
+					<p>2. Юзер може обрати опції:</p>
+					<ul>
+						<li>'Всі дні'</li>
+						<li>'Будні дні'</li>
+						<li>'Вихідні дні'</li>
+					</ul>
+
+					<p>3. Юзер може вибрати опції:</p>
+					<ul>
+						<li>'Порахувати кількість днів'</li>
+						<li>'Порахувати кількість годин'</li>
+						<li>'Порахувати кількість хвилин'</li>
+						<li>'Порахувати кількість секунд'</li>
+					</ul>
+
+					<p>
+						4. Юзер може зайти в застосунок і побачити, якщо вони є, останні 10
+						результатів, які він рахував у вигляді таблиці (стартова дата,
+						кінцева дата, і який результат виміру). Для цього використати
+						<code>localStorage</code>.
+					</p>
+				</div>
 				<label for="start-date" style="margin-top: 30px">Task 2: </label>
 				<p>
 					На другій табі юзер може обрати країну в першому інпуті, потім рік в
@@ -71,32 +91,66 @@
 				<p class="toggle-hidden-text" onclick="toggleText2()">
 					<u>Особливості роботи таби №2</u>
 				</p>
-				<p class="hidden-text" id="text2">
-					Коли юзер заходить на цю табу має бути зроблений запит на ендпоїнт
-					https://calendarific.com/api/v2/countries для отримання списку всіх
-					країн. Цей список буде використовуватись для опцій в першому інпуті
-					'Вибір країни'. В другому інпуті 'Вибір року' має бути список років
-					від 2001 до 2049. Цей інпут має бути заблокований доки юзер не обере
-					країну Значенням по замовчуванню в інпуті 'Вибір року' має бути
-					поточний рік Коли обидва параметри будуть обрані, потрібно зробити
-					запит на ендпоїнт https://calendarific.com/api/v2/holidays Отриманий
-					результат потрібно представити у вигляді таблиці з колонками 'Дата' та
-					'Назва свята' Для колонки 'Дата' має бути кнопка по кліку на яку юзер
-					може посортувати свята в хронологічному чи зворотньому хронологічному
-					порядку У випадку помилки якогось з цих двох запитів до ендпоїнтів
-					потрібно вивести на екран блок з повідомленням про помилку
-				</p>
-				<p>
+
+				<div class="hidden-text" id="text2">
+					<p>
+						1. Коли юзер заходить на цю табу, має бути зроблений запит на
+						ендпоїнт
+						<a href="https://calendarific.com/api/v2/countries"
+							>https://calendarific.com/api/v2/countries</a
+						>
+						для отримання списку всіх країн. Цей список буде використовуватись
+						для опцій в першому інпуті 'Вибір країни'.
+					</p>
+					<p>
+						2. В другому інпуті 'Вибір року' має бути список років від 2001 до
+						2049. Цей інпут має бути заблокований, доки юзер не обере країну.
+					</p>
+					<p>
+						3. Значенням по замовчуванню в інпуті 'Вибір року' має бути поточний
+						рік.
+					</p>
+					<p>
+						4. Коли обидва параметри будуть обрані, потрібно зробити запит на
+						ендпоїнт
+						<a href="https://calendarific.com/api/v2/holidays"
+							>https://calendarific.com/api/v2/holidays</a
+						>.
+					</p>
+					<p>
+						5. Отриманий результат потрібно представити у вигляді таблиці з
+						колонками 'Дата' та 'Назва свята'.
+					</p>
+					<p>
+						6. Для колонки 'Дата' має бути кнопка, по кліку на яку юзер може
+						посортувати свята в хронологічному чи зворотньому хронологічному
+						порядку.
+					</p>
+					<p>
+						7. У випадку помилки одного з цих запитів до ендпоїнтів потрібно
+						вивести на екран блок з повідомленням про помилку.
+					</p>
+				</div>
+				<div>
 					<label for="start-date" style="margin-top: 30px"
 						>Загальні особливості роботи застосунку
 					</label>
-					Юзер має мати можливість комфортно працювати з мобільного телефона з
-					цим застосунком— Мається на увазі що має бути передбачена мобільна
-					версія сайтуЮзер має мати можливість перейти на реальну сторінку
-					застосунку в інтернеті— Мається на увазі що застосунок розміщується на
-					Github pagesІнтерфейс має бути англійською або українською— Мається на
-					увазі що застосунок має бути перекладений ОДНІЄЮ з вказаних мов
-				</p>
+					<p>
+						Юзер має мати можливість комфортно працювати з мобільного телефона з
+						цим застосунком <br />— Мається на увазі що має бути передбачена
+						мобільна версія сайту
+					</p>
+					<p>
+						Юзер має мати можливість перейти на реальну сторінку застосунку в
+						інтернеті <br />
+						— Мається на увазі що застосунок розміщується на Github pages
+					</p>
+					<p>
+						Інтерфейс має бути англійською або українською
+						<br />— Мається на увазі що застосунок має бути перекладений ОДНІЄЮ
+						з вказаних мов
+					</p>
+				</div>
 
 				<p class="last-result" style="margin-top: 30px">
 					Hravchenko Vladyslav<br />
@@ -193,8 +247,7 @@
 				<h2 class="tabs__title">🎉 Holidays</h2>
 				<p class="tabs__text">
 					Use our holiday calendar to view the dates and <br />names of national
-					holidays in <strong>[Country]</strong> for
-					<strong>[Year]</strong>
+					holidays in Country for Year
 				</p>
 
 				<!-- List of countries -->
